Add README and improve implementation
README:
- Add project documentation with design overview and on-disk format
- Document assumptions and simplifications
- Provide usage examples for both NIO API and BoxFs facade
- Add build/test instructions
- Include verified performance and scalability analysis

Code improvements:
- Remove unnecessary sync on channel close (durability only on explicit sync/close)
- Calculate max metadata extents dynamically based on block size
- Remove arbitrary MAX_METADATA_EXTENTS constant

Test updates:
- Remove edge case tests from BoxFsTest (keep basic method verification)
- Update SuperblockTest to use dynamic max extents

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>